--- a/package.json
+++ b/package.json
@@ -17,10 +17,7 @@
     "koa-logger": "^3.2.0",
     "koa-onerror": "^4.1.0",
     "koa-router": "^7.4.0",
-    "koa-static": "^5.0.0",
-    "koa-views": "^6.2.0",
-    "mysql": "^2.18.1",
-    "pug": "^2.0.3"
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
