--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "koa-logger": "^3.2.0",
     "koa-onerror": "^4.1.0",
     "koa-router": "^7.4.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "pm2": "^4.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
