--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "koa-logger": "^3.2.0",
     "koa-onerror": "^4.1.0",
     "koa-router": "^7.4.0",
+    "koa2-cors": "^2.0.6",
     "mysql": "^2.18.1",
     "pm2": "^4.4.0"
   },
