--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koa2",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node bin/www",
@@ -18,8 +18,9 @@
     "koa-onerror": "^4.1.0",
     "koa-router": "^7.4.0",
     "koa2-cors": "^2.0.6",
-    "mysql": "^2.18.1",
-    "pm2": "^4.4.0"
+    "mysql2": "^2.1.0",
+    "pm2": "^4.4.0",
+    "sequelize": "^5.21.12"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
