--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa-onerror": "^4.1.0",
     "koa-router": "^7.4.0",
     "koa2-cors": "^2.0.6",
+    "moment": "^2.26.0",
     "mysql2": "^2.1.0",
     "pm2": "^4.4.0",
     "sequelize": "^5.21.12"
