--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
         script: | # 执行命令（运行到服务器）cd：要确保服务器有这个目录； wget：下载上一步的release到服务器； tar：解压； 安装依赖；启动服务
-          cd /var/www/test
+          cd /var/www/koa
           wget https://github.com/boboyaohuo/koa2/releases/latest/download/release.tgz -O release.tgz
           tar zxvf release.tgz
           rm -rf release.tgz
