--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "dayjs": "^1.11.5",
     "koa": "^2.7.0",
     "koa-body": "^4.2.0",
     "koa-json": "^2.0.2",
@@ -19,6 +20,7 @@
     "koa2-cors": "^2.0.6",
     "moment": "^2.26.0",
     "mysql2": "^2.1.0",
+    "node-cron": "^3.0.1",
     "pm2": "^4.4.0",
     "sequelize": "^5.21.12"
   },
